--- a/output/refs.bib
+++ b/output/refs.bib
@@ -1,6 +1,6 @@
 @article{rudin,
 	author = "Walter Rudin",
-	title = "Boundary values of continous analytic functions",
+	title = "Boundary values of continuous analytic functions",
 	journal = "Proc. Amer. Math. Soc.",
 	year = 1956,
 	volume = 7,
@@ -8,7 +8,7 @@
 }
 @article{carleson,
 	author = "Lennart Carleson",
-	title = "Representation of continous functions",
+	title = "Representation of continuous functions",
 	journal = "Math. Z.",
 	year = 1957,
 	volume = 66,
@@ -38,7 +38,7 @@
 @book{greenkrantz,
 	author = "Robert Everist Greene and Steven George Krantz",
 	title = "Function Theory of One Complex Variable",
-	publisher = "Princeton University Press",
+	publisher = "American Mathematical Society",
 	year = 2006,
 	edition = "3rd"
 }
@@ -47,4 +47,16 @@
 	title = "Functional Analysis",
 	publisher = "Hutchinson and Co",
 	year = 1973
+}
+@book{tao,
+	author = "Terence Tao",
+	title = "An Introduction to Measure Theory",
+	publisher = "American Mathematical Society",
+	year = 2014
+}
+@unpublished{reynir,
+	author = "Reynir Axelsson",
+	title = "Tvinnfallagreining {I}",
+	year = 2014,
+	note = "Course material for an introductory course in complex analysis"
 }
